se agrega la nueva tabla

--- a/sass/parciales/_obrasoc.scss
+++ b/sass/parciales/_obrasoc.scss
@@ -1,6 +1,6 @@
 @import "mediaqueries";
 /*-------------SECCION OBRAS SOCIALES--------*/
-
+/* 
 .tObrasoc {
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
@@ -46,7 +46,7 @@
 
 
     }
-}
+} */
 
 .contenedor_obrasoc {
     padding-bottom: 10px;
