--- a/sass/main.css
+++ b/sass/main.css
@@ -486,57 +486,53 @@ footer {
 }
 
 /*-------------SECCION OBRAS SOCIALES--------*/
+/* 
 .tObrasoc {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 2fr 2fr;
-      grid-template-columns: 1fr 2fr 2fr;
-  -ms-grid-rows: 4fr 4fr 4fr;
-      grid-template-rows: 4fr 4fr 4fr;
-  margin-bottom: 10px;
-  padding: 0 5px;
-}
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-rows: 4fr 4fr 4fr;
+    margin-bottom: 10px;
+    padding: 0 5px;
 
-.tObrasoc__header {
-  background-color: rgba(16, 5, 50, 0.646);
-  color: rgba(253, 255, 253, 0.831);
-  font-weight: bold;
-  text-align: center;
-  padding-top: 20px;
-  -webkit-animation: color-change-2x 2s linear infinite alternate both;
-          animation: color-change-2x 2s linear infinite alternate both;
-}
+    &__header {
+        background-color: rgba(16, 5, 50, 0.646);
+        color: rgba(253, 255, 253, 0.831);
+        font-weight: bold;
+        text-align: center;
+        padding-top: 20px;
+        animation: color-change-2x 2s linear infinite alternate both;
+    }
 
-.tObrasoc__tabla {
-  padding: 5px 0px;
-  font-weight: 400;
-  color: #182163;
-  font-weight: bold;
-}
+    &__tabla {
+        padding: 5px 0px;
+        font-weight: 400;
+        color: $fuenteAzul;
+        font-weight: bold;
+    }
 
-.tObrasoc__alt {
-  background-color: rgba(135, 170, 222, 0.201);
-  color: #16168f;
-  font-weight: bold;
-  padding: 5px 0px;
-}
+    &__alt {
+        background-color: rgba(135, 170, 222, 0.201);
+        color: rgb(22, 22, 143);
+        font-weight: bold;
+        padding: 5px 0px;
+    }
 
-.tObrasoc ul {
-  list-style: none;
-}
+    ul {
+        list-style: none;
 
-.tObrasoc ul li {
-  color: #516f15;
-  font-weight: bold;
-  font-style: italic;
-}
+        li {
+            color: rgb(81, 111, 21);
+            font-weight: bold;
+            font-style: italic;
 
-@media screen and (max-width: 480px) {
-  .tObrasoc ul li {
-    font-size: 1.1rem;
-  }
-}
+            @include movil {
+                font-size: 1.1rem;
+            }
+        }
 
+
+    }
+} */
 .contenedor_obrasoc {
   padding-bottom: 10px;
   display: -webkit-box;
