--- a/sass/parciales/_obrasoc.scss
+++ b/sass/parciales/_obrasoc.scss
@@ -1,34 +1,124 @@
 @import "mediaqueries";
 /*-------------SECCION OBRAS SOCIALES--------*/
-/* 
-.tObrasoc {
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
-    grid-template-rows: 4fr 4fr 4fr;
-    margin-bottom: 10px;
-    padding: 0 5px;
 
-    &__header {
-        background-color: rgba(16, 5, 50, 0.646);
-        color: rgba(253, 255, 253, 0.831);
-        font-weight: bold;
-        text-align: center;
-        padding-top: 20px;
-        animation: color-change-2x 2s linear infinite alternate both;
+
+.tablaObrasoc {
+    
+    width: 100%;
+    box-shadow: 10px 10px 5px #888888;
+    border: 1px solid #000000;
+    margin-bottom: 20px;
+    border-radius: 5px;
+
+    &__cabecera{
+        
+        td {
+        
+            border-width:0px 0px 0px 0px;
+            text-align: center;        
+            font-size: 14px;
+            font-family: Arial;
+            font-weight: bold;
+            color: #ffffff;
+            animation: color-change-2x 2s linear infinite alternate both;
+           
+          
+        }
+
+
     }
 
-    &__tabla {
-        padding: 5px 0px;
-        font-weight: 400;
+
+    &__fila{
+        background-color: white;
+    
+        td{
+            color: $fuenteAzul;
+            font-weight: bold;
+        }
+    
+        ul {
+            list-style: none;
+    
+            li {
+                color: rgb(81, 111, 21);
+                font-weight: bold;
+                font-style: italic;
+    
+                @include movil {
+                    font-size: 1.1rem;
+                }
+            }
+    
+    
+        }
+    }
+
+    &__filaAlt{
+    background-color: rgba(135, 170, 222, 0.201);
+
+    td{
+        color: rgb(79, 6, 147);
+        font-weight: bold;
+    }
+    ul {
+        list-style: none;
+
+        li {
+            color: rgb(81, 111, 21);
+            font-weight: bold;
+            font-style: italic;
+
+            @include movil {
+                font-size: 1.1rem;
+            }
+        }
+
+
+    }
+}
+
+
+
+
+
+
+    td {
+        border: 1px solid #000000;
+        text-align: center;
+        padding: 10px;
+        font-size: 15px;
+    }
+
+
+}
+
+
+/*
+
+.cabeceraTabla {
+    td {
+        
+        border-width:0px 0px 0px 0px;
+        text-align: center;        
+        font-size: 14px;
+        font-family: Arial;
+        font-weight: bold;
+        color: #ffffff;
+        animation: color-change-2x 2s linear infinite alternate both;
+       
+      
+    }
+
+    
+}
+
+.rowPrin{
+    background-color: white;
+
+    td{
         color: $fuenteAzul;
         font-weight: bold;
-    }
-
-    &__alt {
-        background-color: rgba(135, 170, 222, 0.201);
-        color: rgb(22, 22, 143);
-        font-weight: bold;
-        padding: 5px 0px;
     }
 
     ul {
@@ -46,18 +136,45 @@
 
 
     }
-} */
+}
+
+.rowAlt{
+    background-color: rgba(135, 170, 222, 0.201);
+
+    td{
+        color: rgb(79, 6, 147);
+        font-weight: bold;
+    }
+    ul {
+        list-style: none;
+
+        li {
+            color: rgb(81, 111, 21);
+            font-weight: bold;
+            font-style: italic;
+
+            @include movil {
+                font-size: 1.1rem;
+            }
+        }
+
+
+    }
+}
+*/
+
+
 
 .contenedor_obrasoc {
     padding-bottom: 10px;
     display: flex;
     justify-content: center;
 
-    @include tablet{
+    @include tablet {
         margin-bottom: 20px;
     }
 
-    @include movil{
+    @include movil {
         margin-bottom: 10px;
         margin-left: 10px;
     }
@@ -66,7 +183,7 @@
         width: 200px;
         padding-right: 20px;
 
-        @include movil{
+        @include movil {
             height: 60px;
         }
     }
