--- a/sass/parciales/_obrasoc.scss
+++ b/sass/parciales/_obrasoc.scss
@@ -3,64 +3,13 @@
 
 
 .tablaObrasoc {
-    
+
     width: 100%;
     box-shadow: 10px 10px 5px #888888;
     border: 1px solid #000000;
     margin-bottom: 20px;
     border-radius: 5px;
 
-    &__cabecera{
-        
-        td {
-        
-            border-width:0px 0px 0px 0px;
-            text-align: center;        
-            font-size: 14px;
-            font-family: Arial;
-            font-weight: bold;
-            color: #ffffff;
-            animation: color-change-2x 2s linear infinite alternate both;
-           
-          
-        }
-
-
-    }
-
-
-    &__fila{
-        background-color: white;
-    
-        td{
-            color: $fuenteAzul;
-            font-weight: bold;
-        }
-    
-        ul {
-            list-style: none;
-    
-            li {
-                color: rgb(81, 111, 21);
-                font-weight: bold;
-                font-style: italic;
-    
-                @include movil {
-                    font-size: 1.1rem;
-                }
-            }
-    
-    
-        }
-    }
-
-    &__filaAlt{
-    background-color: rgba(135, 170, 222, 0.201);
-
-    td{
-        color: rgb(79, 6, 147);
-        font-weight: bold;
-    }
     ul {
         list-style: none;
 
@@ -69,19 +18,11 @@
             font-weight: bold;
             font-style: italic;
 
-            @include movil {
-                font-size: 1.1rem;
+            @include tablet {
+                font-size: 1.2rem;
             }
         }
-
-
     }
-}
-
-
-
-
-
 
     td {
         border: 1px solid #000000;
@@ -90,79 +31,50 @@
         font-size: 15px;
     }
 
+    &__cabecera {
 
-}
+        td {
 
-
-/*
-
-.cabeceraTabla {
-    td {
-        
-        border-width:0px 0px 0px 0px;
-        text-align: center;        
-        font-size: 14px;
-        font-family: Arial;
-        font-weight: bold;
-        color: #ffffff;
-        animation: color-change-2x 2s linear infinite alternate both;
-       
-      
-    }
-
-    
-}
-
-.rowPrin{
-    background-color: white;
-
-    td{
-        color: $fuenteAzul;
-        font-weight: bold;
-    }
-
-    ul {
-        list-style: none;
-
-        li {
-            color: rgb(81, 111, 21);
+            border-width: 0px 0px 0px 0px;
+            text-align: center;
+            font-size: 14px;
+            font-family: Arial;
             font-weight: bold;
-            font-style: italic;
-
-            @include movil {
-                font-size: 1.1rem;
+            color: #ffffff;
+            animation: color-change-2x 2s linear infinite alternate both;
+            @include tablet{
+                font-size: 1.3rem;
             }
         }
 
 
     }
-}
 
-.rowAlt{
-    background-color: rgba(135, 170, 222, 0.201);
 
-    td{
-        color: rgb(79, 6, 147);
-        font-weight: bold;
-    }
-    ul {
-        list-style: none;
+    &__fila {
+        background-color: white;
 
-        li {
-            color: rgb(81, 111, 21);
+        td {
+            color: $fuenteAzul;
             font-weight: bold;
-            font-style: italic;
-
-            @include movil {
-                font-size: 1.1rem;
+            @include tablet{
+                font-size: 1.3rem;
             }
         }
+    }
 
+    &__filaAlt {
+        background-color: rgba(74, 130, 215, 0.201);
 
+        td {
+            color: rgb(79, 6, 147);
+            font-weight: bold;
+            @include tablet{
+                font-size: 1.3rem;
+            }
+        }
     }
 }
-*/
-
 
 
 .contenedor_obrasoc {
