--- a/sass/parciales/_productos.scss
+++ b/sass/parciales/_productos.scss
@@ -4,12 +4,11 @@
 
 
 
-    input{
-        margin-left: 300px;
-        margin-bottom: 30px;
+    .btn{
+        margin-left: 250px;
     }
 
-    label {
+    .lblProd {
         border:chocolate solid 1px;
         background-color: coral;
     }
@@ -23,6 +22,13 @@
         display: none;
     }
 
+
+    #btnradio2:checked ~ .galeria>.lentesSol{
+        display: none;
+    }
+    #btnradio3:checked ~ .galeria>.lentes{
+        display: none;
+    }
 
 
 
@@ -66,50 +72,25 @@
 }
 
 
-/* 
-.galeria {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-   
+.contVideo {
+    padding: 10px 0;
+    margin-left: 120px;
 
-    &__contImag {
+    &--video {
+        padding-right: 50px;
+        height: 320px;
 
-        width: 380px;
-        box-shadow: $sombreado;
-        height: 300px;
-        margin-bottom: 60px;
+        @include tablet {
 
-        img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
+            margin-left: 5rem;
+
         }
 
-        h5 {
-            box-shadow: $sombreado;
+        @include movil{
+            height: 13rem;
+            margin-right: 2rem;
         }
     }
 
-    &__contVideo {
-        padding: 10px 0;
 
-        &--video {
-            padding-right: 50px;
-            height: 320px;
-
-            @include tablet {
-
-                margin-left: 5rem;
-
-            }
-
-            @include movil{
-                height: 13rem;
-                margin-right: 2rem;
-            }
-        }
-
-
-    }
-} */
+}
