--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,8 +43,11 @@ body {
         text-decoration:underline rgba(250, 144, 125, 0.605) solid 3px;;
         padding-top:20px;
         font-family: 'Overlock', cursive;
+        animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+        
         @include tablet {
             font-size: 2.5rem;
+            animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
         }
     }
     h2 {
@@ -148,4 +151,49 @@ body {
         transform: scale(1);
     }
 }
-    
+
+/*-----Se usa en los iconos del footer-------*/
+@keyframes scale-in-center {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 1;
+    }
+  }
+ /*-----Se us en los videos de productos------*/ 
+  @keyframes fade-in-fwd {
+    0% {
+      -webkit-transform: translateZ(-80px);
+              transform: translateZ(-80px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateZ(0);
+              transform: translateZ(0);
+      opacity: 1;
+    }
+  }
+
+ /*----Se usa en los titulos-------*/ 
+  @keyframes tracking-in-expand-fwd {
+    0% {
+      letter-spacing: -0.5em;
+      -webkit-transform: translateZ(-700px);
+              transform: translateZ(-700px);
+      opacity: 0;
+    }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      -webkit-transform: translateZ(0);
+              transform: translateZ(0);
+      opacity: 1;
+    }
+  }
+  
