--- a/sass/parciales/_productos.scss
+++ b/sass/parciales/_productos.scss
@@ -80,6 +80,7 @@
     &--video {
         padding-right: 50px;
         height: 320px;
+        animation: fade-in-fwd 3s cubic-bezier(0.390, 0.575, 0.565, 1.000) 4s both;
 
         
         @include movil {
